Correction des libellés des pages de liste de vocabulaires.

--- a/src/fr/gouv/culture/thesaurus/service/thesaurus-labels_fr.properties
+++ b/src/fr/gouv/culture/thesaurus/service/thesaurus-labels_fr.properties
@@ -131,13 +131,13 @@ contact.error.no_bots=Les robots ne sont pas autorisés à faire des demandes.
 
 producers.title=Services producteurs
 
-producer_schemes.title=Service producteur : {0}
-producer_schemes.link.producers=Tous les services producteurs
+producer_schemes.title={0} - Liste des vocabulaires
+producer_schemes.link.producers=Liste des services producteurs
 
 subjects.title=Sujets
 
-subject_schemes.title=Sujet : {0}
-subject_schemes.link.subjects=Tous les sujets
+subject_schemes.title={0} - Liste des vocabulaires
+subject_schemes.link.subjects=Liste des sujets
 
 # ### SPARQL EndPoint #######################################################
 sparql_endpoint.content.append=
