Corrections mineures du code source.

--- a/src/fr/gouv/culture/thesaurus/service/thesaurus-labels_fr.properties
+++ b/src/fr/gouv/culture/thesaurus/service/thesaurus-labels_fr.properties
@@ -105,7 +105,7 @@ property.focus=Ressource(s) associée(s)
 # ### Formulaire de contact ################################################
 contact.title=Contacter le producteur du vocabulaire - {0}
 contact.breadcrumb=Contact
-contact.from=Votre adresse mèl :
+contact.from=Votre adresse électronique :
 contact.name=Votre nom :
 contact.subject=Objet de la demande :
 contact.message=Contenu de la demande :
@@ -116,8 +116,8 @@ contact.send=Envoyer
 contact.send.success=Votre demande a été envoyée.
 
 contact.error.title=Votre demande n'a pas été envoyée :
-contact.error.from.required=Vous devez renseigner votre adresse mèl.
-contact.error.from.invalid=Vous devez renseigner une adresse mèl valide.
+contact.error.from.required=Vous devez renseigner votre adresse électronique.
+contact.error.from.invalid=Vous devez renseigner une adresse électronique valide.
 contact.error.name.required=Vous devez renseigner votre nom.
 contact.error.subject.required=Vous devez renseigner l'objet de votre demande.
 contact.error.message.required=Vous devez renseigner le contenu de votre demande.
