Affichage des illustrations liées

--- a/src/fr/gouv/culture/thesaurus/service/thesaurus-labels_fr.properties
+++ b/src/fr/gouv/culture/thesaurus/service/thesaurus-labels_fr.properties
@@ -93,6 +93,7 @@ property.topAncestor = Terme(s) de premier niveau
 property.broader = Terme(s) générique(s)
 property.narrower = Terme(s) spécifique(s)
 property.related = Terme(s) associé(s)
+property.thumbnails = Illustration(s) 
 
 # ### Alignement des concepts ################################################
 property.closeMatch=Concept(s) approchant(s) dans d'autres vocabulaires
