Ajout de l'affichage des sources d'un terme

--- a/src/fr/gouv/culture/thesaurus/service/open-searches_fr.properties
+++ b/src/fr/gouv/culture/thesaurus/service/open-searches_fr.properties
@@ -28,10 +28,10 @@
 
 link.title=Rechercher le terme {0} sur le site {1}
 
-# search-1.name=Wikimedia Commons
-# search-1.icon=http://upload.wikimedia.org/wikipedia/en/thumb/4/4a/Commons-logo.svg/36px-Commons-logo.svg.png
-# search-1.url=http://commons.wikimedia.org/w/index.php?search={0}
+search-1.name=Wikimedia Commons
+search-1.icon=http://upload.wikimedia.org/wikipedia/en/thumb/4/4a/Commons-logo.svg/36px-Commons-logo.svg.png
+search-1.url=http://commons.wikimedia.org/w/index.php?search={0}
 
-# search-2.name=Wiktionnaire
-# search-2.icon=http://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Wiktprintable_without_text.svg/36px-Wiktprintable_without_text.svg.png
-# search-2.url=http://fr.wiktionary.org/w/index.php?search={0}
+search-2.name=Wiktionnaire
+search-2.icon=http://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Wiktprintable_without_text.svg/36px-Wiktprintable_without_text.svg.png
+search-2.url=http://fr.wiktionary.org/w/index.php?search={0}
