Ajout de la page ConceptGroup - Initialisation : Modèle + Mise en place dans l'architecture
Ajout d'un modèle de données correspondant aux conceptGroups
Ajout de la liaison entre requêtes et modèles
Requêtes Sparql (récupération des conceptGroups selon leur label et un vocabulaire)
Ajout de la vue (affichage à terminer)

--- a/src/fr/gouv/culture/thesaurus/service/thesaurus-labels_fr.properties
+++ b/src/fr/gouv/culture/thesaurus/service/thesaurus-labels_fr.properties
@@ -95,6 +95,10 @@ property.narrower = Terme(s) spécifique(s)
 property.related = Terme(s) associé(s)
 property.thumbnails = Illustration(s) 
 
+# ### Propriétés des conceptGroups (ConceptGroup) ################################################
+property.filterByVocabulary = Filtrer par vocabulaire
+
+
 # ### Alignement des concepts ################################################
 property.closeMatch=Concept(s) approchant(s) dans d'autres vocabulaires
 property.exactMatch=Concept(s) équivalent(s) dans d'autres vocabulaires
