Correction de l'affichage des libellés pref et alt et de leur source
Les prefLabel et altLabel, ainsi que leur sources issues de skos XL ne s'affichaient pas correctement dans certains cas
La récupération des labels a été complètement revue dans ce commit

--- a/src/fr/gouv/culture/thesaurus/service/thesaurus-labels_fr.properties
+++ b/src/fr/gouv/culture/thesaurus/service/thesaurus-labels_fr.properties
@@ -94,6 +94,7 @@ property.broader = Terme(s) générique(s)
 property.narrower = Terme(s) spécifique(s)
 property.related = Terme(s) associé(s)
 property.thumbnails = Illustration(s) 
+property.termSource = Source
 
 # ### Propriétés des conceptGroups (ConceptGroup) ################################################
 property.filterByVocabulary = Filtrer par vocabulaire
